crates/plotnik-tests/tests/02-parser/recovery_unclosed/unclosed_predicate_string.txt
Q = (identifier == "foo)
------------------ DIAGNOSTICS -------------------
error: unterminated string
 --> query.ptk:1:20
  |
1 | Q = (identifier == "foo)
  |                    ^^^^^
  |
help: anonymous nodes match literal tokens; close the quote: `"foo"`
